--- a/exr2/style.css
+++ b/exr2/style.css
@@ -1,3 +1,27 @@
-canvas {
-    display: block;
+.cov {
+    width: 300px;
+    height: 300px;
+    position: relative;
+    background-color: blanchedalmond;
+}
+.cov span {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50% , -50%);
+    width:  40px;
+    height: 40px;
+    border-left: 2px solid #42F;
+    border-top: 2px solid #42F;
+    border-radius: 50%;
+    animation: spin .5s infinite;
+    display: none;
+}
+@keyframes spin {
+    0% {
+        transform: translate(-50% , -50%) rotate(0);
+    }
+    100% {
+        transform: translate(-50% , -50%) rotate(360deg);
+    }
 }
